test/negative/main_args_requires_export.cg
// This file is intended to fail: `argc`/`argv` are only available through an
// explicit C ABI entry point (`fn[export(C)] main(...) -> i32`).

fn main(argc: i32, argv: const* const* u8) -> i32 {
    argv;
    argc;
    0
}
